styles.css
* {
    /* margin: 0;
    padding: 0; */
    line-height: 1.65em;
    box-sizing: border-box;
}

body {
    font-family: 'Inter', system-ui;
    font-size: 16px;
    color: #0f172a;
    letter-spacing: -0.1px;
    padding: 80px 0;
}

h1 {
    font-weight: 800;
    font-size: 3.25rem;
    line-height: 1.25em;
    letter-spacing: -1.25px;
}

h2 {
    font-size: 1.5rem;
}

p,
li {
    color: #475569;
}

img {
    display: block;
    width: 100%;
    height: 500px;
    object-fit: cover;
    border: 1px solid rgba(15,23,42,0.2);
    border-radius: 0.375rem;
}

.container {
    width: 100%;
    max-width: 50rem;
    margin: auto;
}

.ingredients {
    width: 100%;
    background-color: #f3f4f6;
    padding: 2rem;
    border-radius: 0.375rem;
}

.back-button {
    display: inline-block;
    margin: 1.5rem 0;
    padding: 0.5rem 2.5rem;
    border-radius: 0.375rem;
    background-color: #0f172a;
    color: #ffffff;
    text-decoration: none;
}

